--- a/src/projectx/projectx.ioc
+++ b/src/projectx/projectx.ioc
@@ -23,18 +23,22 @@ Mcu.Name=STM32F411C(C-E)Ux
 Mcu.Package=UFQFPN48
 Mcu.Pin0=PA2
 Mcu.Pin1=PA3
-Mcu.Pin10=PB6
-Mcu.Pin11=PB7
-Mcu.Pin12=VP_FATFS_VS_Generic
+Mcu.Pin10=PA10
+Mcu.Pin11=PA13
+Mcu.Pin12=PA14
+Mcu.Pin13=PB3
+Mcu.Pin14=PB6
+Mcu.Pin15=PB7
+Mcu.Pin16=VP_FATFS_VS_Generic
 Mcu.Pin2=PA4
 Mcu.Pin3=PA5
 Mcu.Pin4=PA6
 Mcu.Pin5=PA7
-Mcu.Pin6=PA9
-Mcu.Pin7=PA10
-Mcu.Pin8=PA13
-Mcu.Pin9=PA14
-Mcu.PinsNb=13
+Mcu.Pin6=PB0
+Mcu.Pin7=PB1
+Mcu.Pin8=PB12
+Mcu.Pin9=PA9
+Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411CEUx
@@ -71,6 +75,14 @@ PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB0.Locked=true
+PB0.Signal=GPIO_Output
+PB1.Locked=true
+PB1.Signal=GPIO_Output
+PB12.Locked=true
+PB12.Signal=GPIO_Output
+PB3.Locked=true
+PB3.Signal=GPIO_Input
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.Mode=I2C
@@ -137,15 +149,17 @@ RCC.VCOOutputFreq_Value=200000000
 RCC.VcooutputI2S=96000000
 SH.ADCx_IN4.0=ADC1_IN4,IN4
 SH.ADCx_IN4.ConfNb=1
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
-SPI1.CalculateBaudRate=12.5 MBits/s
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_256
+SPI1.CalculateBaudRate=390.625 KBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-USART1.IPParameters=VirtualMode
+USART1.BaudRate=9600
+USART1.IPParameters=VirtualMode,BaudRate
 USART1.VirtualMode=VM_ASYNC
-USART2.IPParameters=VirtualMode
+USART2.BaudRate=9600
+USART2.IPParameters=VirtualMode,BaudRate
 USART2.VirtualMode=VM_ASYNC
 VP_FATFS_VS_Generic.Mode=User_defined
 VP_FATFS_VS_Generic.Signal=FATFS_VS_Generic
