--- a/src/projectx/projectx.ioc
+++ b/src/projectx/projectx.ioc
@@ -5,6 +5,11 @@ ADC1.NbrOfConversionFlag=1
 ADC1.Rank-1\#ChannelRegularConversion=1
 ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.master=1
+CAD.formats=
+CAD.pinconfig=
+CAD.provider=
+FATFS.IPParameters=_USE_LFN
+FATFS._USE_LFN=3
 File.Version=6
 KeepUserPlacement=false
 Mcu.CPN=STM32F411CEU6
@@ -14,22 +19,26 @@ Mcu.IP1=FATFS
 Mcu.IP2=I2C1
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
-Mcu.IP5=SPI1
-Mcu.IP6=SYS
-Mcu.IP7=USART1
-Mcu.IP8=USART2
-Mcu.IPNb=9
+Mcu.IP5=SDIO
+Mcu.IP6=SPI1
+Mcu.IP7=SYS
+Mcu.IP8=USART1
+Mcu.IP9=USART2
+Mcu.IPNb=10
 Mcu.Name=STM32F411C(C-E)Ux
 Mcu.Package=UFQFPN48
 Mcu.Pin0=PA2
 Mcu.Pin1=PA3
-Mcu.Pin10=PA10
-Mcu.Pin11=PA13
-Mcu.Pin12=PA14
-Mcu.Pin13=PB3
-Mcu.Pin14=PB6
-Mcu.Pin15=PB7
-Mcu.Pin16=VP_FATFS_VS_Generic
+Mcu.Pin10=PA9
+Mcu.Pin11=PA10
+Mcu.Pin12=PA13
+Mcu.Pin13=PA14
+Mcu.Pin14=PB3
+Mcu.Pin15=PB4
+Mcu.Pin16=PB6
+Mcu.Pin17=PB7
+Mcu.Pin18=PB9
+Mcu.Pin19=VP_FATFS_VS_SDIO
 Mcu.Pin2=PA4
 Mcu.Pin3=PA5
 Mcu.Pin4=PA6
@@ -37,13 +46,13 @@ Mcu.Pin5=PA7
 Mcu.Pin6=PB0
 Mcu.Pin7=PB1
 Mcu.Pin8=PB12
-Mcu.Pin9=PA9
-Mcu.PinsNb=17
+Mcu.Pin9=PB15
+Mcu.PinsNb=20
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411CEUx
-MxCube.Version=6.6.1
-MxDb.Version=DB.6.0.60
+MxCube.Version=6.8.1
+MxDb.Version=DB.6.0.81
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -54,7 +63,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
-NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
@@ -69,8 +78,8 @@ PA3.Signal=USART2_RX
 PA4.Signal=ADCx_IN4
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
-PA6.Mode=Full_Duplex_Master
-PA6.Signal=SPI1_MISO
+PA6.Mode=SD_1_bit
+PA6.Signal=SDIO_CMD
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
 PA9.Mode=Asynchronous
@@ -81,12 +90,18 @@ PB1.Locked=true
 PB1.Signal=GPIO_Output
 PB12.Locked=true
 PB12.Signal=GPIO_Output
+PB15.Mode=SD_1_bit
+PB15.Signal=SDIO_CK
 PB3.Locked=true
 PB3.Signal=GPIO_Input
+PB4.Mode=Full_Duplex_Master
+PB4.Signal=SPI1_MISO
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
-PB7.Mode=I2C
-PB7.Signal=I2C1_SDA
+PB7.Mode=SD_1_bit
+PB7.Signal=SDIO_D0
+PB9.Mode=I2C
+PB9.Signal=I2C1_SDA
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -110,6 +125,7 @@ ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=projectx.ioc
 ProjectManager.ProjectName=projectx
+ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
@@ -147,6 +163,8 @@ RCC.VCOInputFreq_Value=2000000
 RCC.VCOInputMFreq_Value=1000000
 RCC.VCOOutputFreq_Value=200000000
 RCC.VcooutputI2S=96000000
+SDIO.ClockDiv=255
+SDIO.IPParameters=ClockDiv
 SH.ADCx_IN4.0=ADC1_IN4,IN4
 SH.ADCx_IN4.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_256
@@ -161,7 +179,7 @@ USART1.VirtualMode=VM_ASYNC
 USART2.BaudRate=9600
 USART2.IPParameters=VirtualMode,BaudRate
 USART2.VirtualMode=VM_ASYNC
-VP_FATFS_VS_Generic.Mode=User_defined
-VP_FATFS_VS_Generic.Signal=FATFS_VS_Generic
+VP_FATFS_VS_SDIO.Mode=SDIO
+VP_FATFS_VS_SDIO.Signal=FATFS_VS_SDIO
 board=custom
 isbadioc=false
