--- a/src/projectx/projectx.ioc
+++ b/src/projectx/projectx.ioc
@@ -8,8 +8,9 @@ ADC1.master=1
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-FATFS.IPParameters=_USE_LFN
-FATFS._USE_LFN=3
+FATFS.IPParameters=_USE_LFN,_MAX_SS
+FATFS._MAX_SS=4096
+FATFS._USE_LFN=1
 File.Version=6
 KeepUserPlacement=false
 Mcu.CPN=STM32F411CEU6
@@ -35,8 +36,8 @@ Mcu.Pin12=PA13
 Mcu.Pin13=PA14
 Mcu.Pin14=PB3
 Mcu.Pin15=PB4
-Mcu.Pin16=PB6
-Mcu.Pin17=PB7
+Mcu.Pin16=PB7
+Mcu.Pin17=PB8
 Mcu.Pin18=PB9
 Mcu.Pin19=VP_FATFS_VS_SDIO
 Mcu.Pin2=PA4
@@ -96,10 +97,11 @@ PB3.Locked=true
 PB3.Signal=GPIO_Input
 PB4.Mode=Full_Duplex_Master
 PB4.Signal=SPI1_MISO
-PB6.Mode=I2C
-PB6.Signal=I2C1_SCL
 PB7.Mode=SD_1_bit
 PB7.Signal=SDIO_D0
+PB8.Locked=true
+PB8.Mode=I2C
+PB8.Signal=I2C1_SCL
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
 PinOutPanel.RotationAngle=0
@@ -131,8 +133,8 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_FATFS_Init-FATFS-false-HAL-false
-RCC.48MHZClocksFreq_Value=50000000
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_FATFS_Init-FATFS-false-HAL-false,9-MX_SDIO_SD_Init-SDIO-false-HAL-true
+RCC.48MHZClocksFreq_Value=40000000
 RCC.AHBFreq_Value=100000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
 RCC.APB1Freq_Value=50000000
@@ -147,13 +149,14 @@ RCC.HCLKFreq_Value=100000000
 RCC.HSE_VALUE=25000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=96000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOInputMFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOInputMFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.PLLCLKFreq_Value=100000000
 RCC.PLLM=8
 RCC.PLLN=100
-RCC.PLLQCLKFreq_Value=50000000
+RCC.PLLQ=5
+RCC.PLLQCLKFreq_Value=40000000
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=12500000
 RCC.SYSCLKFreq_VALUE=100000000
@@ -163,7 +166,7 @@ RCC.VCOInputFreq_Value=2000000
 RCC.VCOInputMFreq_Value=1000000
 RCC.VCOOutputFreq_Value=200000000
 RCC.VcooutputI2S=96000000
-SDIO.ClockDiv=255
+SDIO.ClockDiv=100
 SDIO.IPParameters=ClockDiv
 SH.ADCx_IN4.0=ADC1_IN4,IN4
 SH.ADCx_IN4.ConfNb=1
@@ -182,4 +185,4 @@ USART2.VirtualMode=VM_ASYNC
 VP_FATFS_VS_SDIO.Mode=SDIO
 VP_FATFS_VS_SDIO.Signal=FATFS_VS_SDIO
 board=custom
-isbadioc=false
+isbadioc=true
