--- a/src/projectx/projectx.ioc
+++ b/src/projectx/projectx.ioc
@@ -30,25 +30,26 @@ Mcu.Name=STM32F411C(C-E)Ux
 Mcu.Package=UFQFPN48
 Mcu.Pin0=PA2
 Mcu.Pin1=PA3
-Mcu.Pin10=PA9
-Mcu.Pin11=PA10
-Mcu.Pin12=PA13
-Mcu.Pin13=PA14
-Mcu.Pin14=PB3
-Mcu.Pin15=PB4
-Mcu.Pin16=PB7
-Mcu.Pin17=PB8
-Mcu.Pin18=PB9
-Mcu.Pin19=VP_FATFS_VS_SDIO
+Mcu.Pin10=PB15
+Mcu.Pin11=PA9
+Mcu.Pin12=PA10
+Mcu.Pin13=PA13
+Mcu.Pin14=PA14
+Mcu.Pin15=PB3
+Mcu.Pin16=PB4
+Mcu.Pin17=PB7
+Mcu.Pin18=PB8
+Mcu.Pin19=PB9
 Mcu.Pin2=PA4
+Mcu.Pin20=VP_FATFS_VS_SDIO
 Mcu.Pin3=PA5
 Mcu.Pin4=PA6
 Mcu.Pin5=PA7
 Mcu.Pin6=PB0
 Mcu.Pin7=PB1
 Mcu.Pin8=PB12
-Mcu.Pin9=PB15
-Mcu.PinsNb=20
+Mcu.Pin9=PB13
+Mcu.PinsNb=21
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411CEUx
@@ -89,8 +90,14 @@ PB0.Locked=true
 PB0.Signal=GPIO_Output
 PB1.Locked=true
 PB1.Signal=GPIO_Output
+PB12.GPIOParameters=GPIO_Label
+PB12.GPIO_Label=CE
 PB12.Locked=true
 PB12.Signal=GPIO_Output
+PB13.GPIOParameters=GPIO_Label
+PB13.GPIO_Label=CSN
+PB13.Locked=true
+PB13.Signal=GPIO_Output
 PB15.Mode=SD_1_bit
 PB15.Signal=SDIO_CK
 PB3.Locked=true
@@ -185,4 +192,4 @@ USART2.VirtualMode=VM_ASYNC
 VP_FATFS_VS_SDIO.Mode=SDIO
 VP_FATFS_VS_SDIO.Signal=FATFS_VS_SDIO
 board=custom
-isbadioc=true
+isbadioc=false
